--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     kapt 'com.android.databinding:compiler:3.5.3'
 
     implementation "androidx.activity:activity-ktx:1.2.1"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
 }
